--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Setup
 title:        The Ethics of Algorithms
 tagline:      An exploration of automation, black boxes, and their impacts
-baseurl:      "https://marquettecomputationalsocialscience.github.io/clusteredcrimemaps/"
+baseurl:      "clusteredcrimemaps/"
 paginate:     1
 
 # About/contact
